@@ -14,7 +14,7 @@ import java.util.*;
 
 /** A generic multi-feature console for use in the Armitage network attack tool */
 public class Display extends JPanel {
-	protected JTextArea  console;
+	protected JTextPane  console;
 	protected Properties display;
 	protected Font       consoleFont;
 
@@ -45,6 +45,38 @@ public class Display extends JPanel {
 		}
 	}
 
+	public void append(final String text, final Color fg) {
+		if (SwingUtilities.isEventDispatchThread()) {
+			_append(text, fg);
+		}
+		else {
+			SwingUtilities.invokeLater(new Runnable() {
+				public void run() {
+					_append(text, fg);
+				}
+			});
+		}
+	}
+
+	public void _append(String text, Color foreground) {
+		try {
+			Rectangle r = console.getVisibleRect();
+			StyledDocument doc = console.getStyledDocument();
+			if (foreground == null) {
+				doc.insertString(doc.getLength(), text, null);
+			}
+			else {
+				SimpleAttributeSet attrs = new SimpleAttributeSet();
+				StyleConstants.setForeground(attrs, foreground);
+				doc.insertString(doc.getLength(), text, attrs);
+			}
+			console.scrollRectToVisible(r);
+		}
+		catch(Exception e) {
+			System.out.println(e);
+		}
+	}
+
 	public void setText(final String _text) {
 		if (SwingUtilities.isEventDispatchThread()) {
 			console.setText(_text);
@@ -71,9 +103,9 @@ public class Display extends JPanel {
 
 		/* init the console */
 
-		console = new JTextArea();
+		console = new JTextPane();
 		console.setEditable(false);
-		console.setLineWrap(true);
+		//console.setLineWrap(true);
 
 		JScrollPane scroll = new JScrollPane(
 					console, 
